# liburtc

./: .gitignore  AUTHORS  COPYING  Doxyfile  LICENSE  Makefile.am  README  configure.ac
examples/: Makefile.am  callee.c  demo.c  demo.html  sandbox.c
include/: config.h  ice.h  peerconn.h  runloop.h  str.h  stun.h  urtc.h
include/urtc/: opts.h
src/: Makefile.am  b64.c  b64.h  err.h  g711.c  g711.h  g711_tables.c  log.h  mdns.c  mdns.h  prng.c  prng.h  sdp.c  sdp.h  urtc.c  urtc.h  uuid.c  uuid.h
tests/: Makefile.am  g711_test.c  mdns_test.c  sdp_test.c  str_test.c  uuid_test.c
