# Builds a minimal example program
#bin_PROGRAMS    = example
#example_CFLAGS  = -I$(top_srcdir)/src/include $(LWS_CFLAGS)
#example_LDADD   = $(top_builddir)/src/liburtc.la $(LWS_LIBS)
#example_SOURCES = server.c

# Builds a minimal example program
bin_PROGRAMS    = sandbox
sandbox_CFLAGS  = -I$(top_srcdir)/src
sandbox_LDADD   = $(top_builddir)/src/liburtc.la
sandbox_SOURCES = sandbox.c
